--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -117,8 +117,8 @@ layout: compress
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'UA-');
-      gtag('config', 'UA-');
+      gtag('config', 'UA-116981728-1');
+      gtag('config', 'UA-116981728-2');
     </script>
 
   </head>
